--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "cursodejs",
+  "type": "module",
+  "name": "modulos",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon Introduccion/probar.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon /modulos/src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config --watch"
   },
   "keywords": [],
   "author": "",
