--- a/modulos/package.json
+++ b/modulos/package.json
@@ -1,10 +1,10 @@
 {
   "type": "module",
-  "name": "cursodejs",
+  "name": "modulos",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "rollup.config.js",
   "scripts": {
-    "start": "nodemon cursodejs/modulos/src/index.js",
+    "start": "nodemon modulos/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --config --watch"
   },
@@ -13,10 +13,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "modules": "^0.4.0",
     "nodemon": "^3.1.7"
-  },
-  "devDependencies": {
-    "rollup": "^4.24.0"
   }
 }
